package com.project.template.entity;

import lombok.Getter;
import lombok.Setter;

/**
 * @author jmjtc
 */
@Getter
@Setter
public class Banner extends BaseEntity{
    private String name;
    private String img;
    private String link;
}
