package com.project.template.entity;

import lombok.Getter;
import lombok.Setter;


@Getter
@Setter
public class Link extends BaseEntity{

    private String name;

    private String link;
}
